# golden

./: package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: deploy.yml
golden-core/: Cargo.toml
golden-core/src/: clock.rs  french.json  game.rs  grid.rs  lexicon.rs  lib.rs  log.rs
golden-core/wordlists/: french1.txt
src/lib/components/: Cell.svelte  FoundWords.svelte  Game.svelte  GoldenWord.svelte  Grid.svelte  Letter.svelte  RemainingLetters.svelte  Score.svelte  Timer.svelte  Triplets.svelte
src/lib/core/: grid.ts  seed.ts
src/lib/core/state/: clock.svelte.ts  foundWords.svelte.ts  game.svelte.ts  golden.svelte.ts  grid.svelte.ts  letterTable.svelte.ts  score.svelte.ts  triplets.svelte.ts  userEvents.svelte.ts
src/routes/: +page.svelte
