[package]
name = "golden-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
lazy_static = "1.4"
glam = "0.30.9"
thiserror = "2.0.17"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.83", features = ["console"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
priority-queue = "2.7.0"
itertools = "0.14.0"
